test(dashboard): exclude spring security from controller tests and pass bytebuddy JVM property configuration